* next-version
- Do not move point by correction functions.
- New interface - =avy-menu=. Thanks to @clemera.
- Mark custom interfaces as autoload.

* v0.5
- Skip words that don't need to be fixed (e.g. duplicates).
- Rename several functions (via name deprecation)
  - =flyspell-correct-next-word-generic= -> =flyspell-correct-next=
  - =flyspell-correct-previous-word-generic= -> =flyspell-correct-previous=
  - =flyspell-correct-word-generic= -> =flyspell-correct-at-point=
- Create a wrapper function for most of the cases, namely
  =flyspell-correct-wrapper=.
- Implement a 'rapid mode' for =flyspell-correct-wrapper=, allowing user to fix
  multiple words in one run (=skip= action can be used to skip current incorrect
  word and continue to the next one).
- Add some simple tests to cover the most important use cases.
- Fix issue when =flyspell-correct-next= doesn't correct word at point.

* v0.4
- Implement =flyspell-correct-next-word-generic= (thanks to @mattiasb for
  suggestion).
- Minor readme updates.

* v0.3
- Make sure that word at point is corrected first when using
  =flyspell-correct-previous-word-generic=.
- New =ido= interface (thanks to @jpkotta).
- New =dummy= interface (thanks to @purcell for suggestion).

* v0.2
- Various documentation updates.
- =flyspell-correct-previous-word-generic= now corrects word at point if it's
  incorrect (#19).
- Simplify =flyspell-correct-previous-word-generic= implementation.
- Basic implementation of =flyspell-correct-auto-mode=.
- Warn user when correction interface is not set.

* v0.1
- Initial implementation.
- Two correction functions:
  - =flyspell-correct-word-generic=
  - =flyspell-correct-previous-word-generic=
- Three out of box interfaces:
  - =ivy=
  - =helm=
  - =popup=