@@ -23,6 +23,13 @@
 ;;   (require 'flyspell-correct-avy-menu)
 ;;   (define-key flyspell-mode-map (kbd "C-;") 'flyspell-correct-wrapper)
 ;;
+;; Or via use-package:
+;;
+;;   (use-package flyspell-correct-avy-menu
+;;     :bind ("C-M-;" . flyspell-correct-wrapper)
+;;     :init
+;;     (setq flyspell-correct-interface #'flyspell-correct-avy-menu))
+;;
 ;;; Code:
 ;;
 
